# jsearch-backend

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  alembic.ini  bencher.py  conftest.py  data-filename.yml  devutils.py  diff.patch  docker-compose.override.yml  docker-compose.yml  gunicorn-conf.py  help.txt  manage.py  mypy.ini  pre-push.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  results.txt  run.sh  run_shell.sh  setup.py  test_tx_number.py  token_holders.json  version.txt  yoyo.ini
config/: dev.env  test_stage.env
jsearch/: async_utils.py  balance_update.py  cli.py  conftest.py  multiprocessing.py  service_bus.py  settings.py  structs.py  typing.py  utils.py
loadtests/: Dockerfile  locustfile.py  requirements.txt
migrations/: 20191015163320_init.sql  20191022111522_test.sql  20191022130158_drop_indexes.sql  20191106151421_add_get_assets_summaries.sql  20191107070950_add_assets_summary_pairs.sql  20191107114749_add_assets_summary_pairs_to_insert_procedure.sql  20191107114749_populate_assets_summary_pairs.sql  20191113155759_fix_blocks_index_by_number.sql  20191113155926_fix_block_index_by_timestamp.sql  20191121094511_drop_old_assets_summary_index.sql  20191121100539_add_new_assets_summary_index.sql  20191127130245_drop_assets_summary_function.sql  20191205092712_add_indexes_internal_txs.sql  20200122113141_delete_broken_chain_events.sql  20200124102203_add_procedure_to_delete_a_whole_block_data.sql  20200217142114_add_dex_logs_storage.sql  (+14 more)
(+606 files in other folders)
