[tool.poetry]
name = "jsearch-backend"
version = "0.1.3"
description = ""
authors = ["Jibrel <dev@jibrel.network>"]

[tool.poetry.dependencies]
python = "~3.6"

# TODO: Uncomment when `jibrelnetwork/jsearch-service-bus#9` will be merged.
# jsearch-service-bus = { path = "./jsearch-service-bus/" }

aiohttp = "3.1.2"
aiohttp-swagger = "1.0.5"
aiopg = "0.14.0"
alembic = "0.9.9"
async-lru = "1.0.1"
asyncpg = "0.15.0"
asyncpgsa = "0.22.0"
backoff = "1.7.1"
cachetools = "3.0.0"
celery = "4.1.1"
Click = "7.0"
ConfigArgParse = "0.13.0"
eth-abi = "1.1.1"
eth-utils = "1.4.1"
ethereum = "2.3.1"
funcy = "1.11"
gunicorn = "19.7.1"
hexbytes = "0.1.0"
psycopg2-binary = "2.7.5"
raven = "6.6.0"
redis = "2.10.6"
requests = "2.18.4"
rlp = "0.6.0"
sentry-sdk = "0.6.2"
SQLAlchemy = "1.2.6"
web3 = "4.2.1"

[tool.poetry.dev-dependencies]
asynctest = "0.12.2"
dsnparse = "0.1.12"
factory-boy = "2.11.1"
flake8 = "3.6.0"
mypy = "0.641"
ptpython = "2.0.3"
pytest = "3.5.0"
pytest-aiohttp = "0.3.0"
pytest-asyncio = "0.8.0"
pytest-cov = "2.6.0"
pytest-logger = "0.3.0"
pytest-mock = "1.10.0"
requests-mock = "1.5.2"
